# domotica-engine

./: .gitignore  Makefile.am  README  configure.ac
doc/: eltako.txt  sunriset.txt
include/: action.h  arguments.h  bool.h  condition.h  device.h  device_list.h  device_logs.h  dht22.h  dht22_private.h  dht22_worker.h  eltako.h  eltako_fsb14.h  eltako_fsr14.h  eltako_fts14em.h  eltako_fud14.h  event.h  gpio.h  input.h  line_parser.h  musiccast.h  output.h  output_list.h  remote.h  rule.h  rule_list.h  rule_parser.h  schedule.h  soltracker.h  store.h  sunriset.h  technologies.h  timer.h  types.h  utils_cmd.h  utils_gpio.h  utils_http.h  utils_sched.h  utils_string.h  utils_sunriset.h  utils_time.h  (+2 more)
m4/: gcov.m4
src/: Makefile.am  action.c  action.h  arguments.c  bool.c  condition.c  device.c  device_list.c  device_logs.c  dht22.c  dht22_worker.c  domctl.c  eltako.c  eltako_fsb14.c  eltako_fsr14.c  eltako_fts14em.c  eltako_fud14.c  engine.c  engine.h  event.c  gpio.c  input.c  input_list.c  input_list.h  line_parser.c  main.c  musiccast.c  output.c  output.h  output_list.c  remote.c  rule.c  rule.h  rule_list.c  rule_list.h  rule_parser.c  rule_parser.h  schedule.c  soltracker.c  store.c  (+15 more)
tests/: Makefile.am  check.c  check_test.c
